# market-simulation-lab

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Cash_Deploy.py  2_Optimize.py  3_Reserve_Over_Time.py  3_Trend_Timing.py
sample_data/: generate_sample_data.py
scripts/: refresh_data.py
src/portfolio_research_lab/: __init__.py  cash_deploy.py  data.py  metrics.py  models.py  optimizer.py  simulator.py  strategies.py  timing.py
tests/: conftest.py  test_cash_deploy.py  test_data.py  test_metrics.py  test_models.py  test_optimize.py  test_simulator.py  test_timing.py
