[project]
name = "portfolio-research-lab"
version = "0.1.0"
description = "A local-first Python application for testing investment and portfolio strategies through historical backtesting and simulation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Portfolio Research Lab" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.36",
    "plotly>=5.22",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "poethepoet>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_research_lab"]

[tool.uv]
# Development dependencies installed with `uv sync --extra dev`.

[tool.poe.tasks]
dev = { cmd = "streamlit run app/Home.py", help = "Run the Streamlit app" }
lint = { cmd = "ruff check .", help = "Lint with ruff" }
fmt = { cmd = "ruff format .", help = "Format with ruff" }
test = { cmd = "pytest", help = "Run the test suite" }
check = { sequence = ["lint", "test"], help = "Lint + run tests" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
