[project]
name = "portfolio-research-lab"
version = "0.1.0"
description = "A local-first Python application for testing investment and portfolio strategies through historical backtesting and simulation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Portfolio Research Lab" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.36",
    "plotly>=5.22",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "ty>=0.0.1a1",
    "poethepoet>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_research_lab"]

[tool.uv]
# Development dependencies installed with `uv sync --extra dev`.

[tool.poe.tasks]
dev = { cmd = "streamlit run app/Home.py", help = "Run the Streamlit app" }
lint = { cmd = "ruff check .", help = "Lint with ruff" }
fmt = { cmd = "ruff format .", help = "Format with ruff" }
typecheck = { cmd = "ty check", help = "Type-check with ty" }
test = { cmd = "pytest", help = "Run the test suite" }
cov = { cmd = "pytest --cov --cov-report=term-missing", help = "Tests + coverage" }
check = { sequence = ["lint", "typecheck", "test"], help = "Lint + typecheck + test" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
    "PT",      # flake8-pytest-style
    "PTH",     # flake8-use-pathlib
    "RET",     # flake8-return
    "TID",     # flake8-tidy-imports
    "N",       # pep8-naming
    "RUF",     # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["portfolio_research_lab"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ty.environment]
python-version = "3.12"
