[project]
name = "portfolio-research-lab"
version = "0.1.0"
description = "A local-first Python application for testing investment and portfolio strategies through historical backtesting and simulation."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Portfolio Research Lab" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "streamlit>=1.59.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    # pyarrow 25.0.0 segfaults during the pandas->Arrow conversion Streamlit
    # runs to serialise DataFrames, but only from Streamlit's script-runner
    # thread (single-threaded use is fine), so it crashes the whole server the
    # moment a page renders a table/chart. Cap below it until the regression is
    # fixed upstream. See https://github.com/apache/arrow (pyarrow 25.0.0).
    "pyarrow>=14,<25",
    # Bayesian (TPE) hyperparameter search driving the strategy optimizer.
    "optuna>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "ty>=0.0.61",
    "poethepoet>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/portfolio_research_lab"]

[tool.uv]
# Development dependencies installed with `uv sync --extra dev`.

[tool.poe.tasks]
dev = { cmd = "streamlit run app/Home.py", help = "Run the Streamlit app" }
lint = { cmd = "ruff check .", help = "Lint with ruff" }
fmt = { cmd = "ruff format .", help = "Format with ruff" }
fmt-check = { cmd = "ruff format --check .", help = "Check formatting (no changes)" }
typecheck = { cmd = "ty check", help = "Type-check with ty" }
test = { cmd = "pytest", help = "Run the test suite" }
cov = { cmd = "pytest --cov --cov-report=term-missing", help = "Tests + coverage" }
check = { sequence = ["lint", "typecheck", "test"], help = "Lint + typecheck + test" }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "app"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "C4",      # flake8-comprehensions
    "PT",      # flake8-pytest-style
    "PTH",     # flake8-use-pathlib
    "RET",     # flake8-return
    "TID",     # flake8-tidy-imports
    "N",       # pep8-naming
    "RUF",     # ruff-specific
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["portfolio_research_lab"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ty.environment]
python-version = "3.12"
